💄 Fix label wrap in Twenty Twenty-Three

--- a/assets/style/form.scss
+++ b/assets/style/form.scss
@@ -22,7 +22,7 @@
 		}
 		
 		.form-block__label {
-			flex: 0 0 calc(100% - (1em + 4px));
+			flex: 0 0 calc(100% - (2em + 4px));
 			order: 0;
 		}
 	}
